# ComputerVision-PROJECT

./: .gitignore  .gitmodules  CMakeLists.txt  video-source.txt
cmake/: FindTesseract.cmake
src/: main.cpp
src/carProcessor/: carProcessor.cpp  carProcessor.hpp
src/dateProcessor/: dateProcessor.cpp  dateProcessor.hpp
